# alife_bots

./: .gitignore  MANIFEST.in  README.md  create_custom_robot.py  debug_step0.py  generate_video.py  pyproject.toml  test_trajectory.py  visualize_random_robot.py
.cursor/: mcp.json
algovivo_pytorch/: __init__.py  energy.py  policy.py  system.py
algovivo_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: batched_energy_example.py
